5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1573_1334.log
== TEST (2019-03-11 15:49:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", ...)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  Ellipsis
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 ...)

print("Multiplicacao: ",2*4 ...)

print("Divisao: ",16/8 ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- ERROR:
File "XXXX", line 3
    print("Subtracao: ",16-8 ...)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",16/8)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  2.0
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",8/1)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",8/1)

print("Resto: ", ...)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2***3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",8/1)

print("Resto: ", ...)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  Ellipsis
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:56:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",8/1)

print("Resto: ", 42//5)

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:56:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",16-8 )

print("Multiplicacao: ", 2*4)

print("Divisao: ",8/1)

print("Resto: ", 42//5)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.105411
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
